# fetchai

./: .bumpversion.cfg  CHANGELOG.md  README.md  UPGRADING.md  pyproject.toml  setup.py
.github/workflows/: _lint.yml  example_unit_tests.yml  examples_unit_tests.yml  python_unit_tests.yml  workflow.yml
cli/: register.py
docs/: ai-communication.mdx  cli.mdx  register_an_agent.mdx  sdk-uagent-communication.mdx
examples/: README.md
examples/readme-agent/: .env.example  README.md  pyproject.toml
examples/readme-agent/readme_agent/: agent.py  readme_utils.py  register_agent.py  send_message.py  settings.py
examples/readme-agent/tests/: test_agent.py
examples/single-shot-agent/: README.md  pyproject.toml
examples/single-shot-agent/single_shot_agent/: main.py
examples/single-shot-agent/tests/: test_main.py
fetchai/: agentverse_config.py  communication.py  fetch.py  logger.py  registration.py  schema.py
fetchai/ai_engine/: __init__.py  ai_engine.py  async_ai_engine.py
fetchai/tests/: conftest.py  test_agent.json  test_ai_engine.py  test_async_ai_engine.py  test_communication.py  test_fetch.py  test_registration.py
tests/fetchai/: test_communication.py
