[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--cov=cli --cov=fetchai"

[tool.coverage.run]
source = ["fetchai"]

[tool.coverage.report]
fail_under = 46
# Put the least covered files at the end of
# the report to make them the most eyecatching!
sort = "-Cover"
show_missing = true
