[tool.poetry]
name = "readme-agent"
version = "0.1.0"
description = "A simple example of how to use the fetchai package to create an agent"
authors = ["scrowland <simon.rowland@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
