[tool.poetry]
name = "single-shot-agent"
version = "0.1.0"
description = "Demonstration Agent"
authors = ["scrowland <simon.rowland@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.7"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
mypy = "^1.14.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_dev_agent = "single_shot_agent.main:run_dev_server"
